Fixes #538